--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,16 @@
 
 body {
   font-family: sans-serif;
-  font-size: 16px;
+  font-size: 22px;
+  text-align: center;
 }
 
 /* main */
 h1 {
+  margin: 10px;
   color: lightblue;
+}
+
+p {
+  margin: 10px;
 }
