--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,21 @@
 body {
   font-family: sans-serif;
   font-size: 22px;
-  text-align: center;
+}
+
+.container {
+  width: 250px;
+  margin: auto;
+}
+
+.template {
+  display: none;
 }
 
 /* main */
 h1 {
   margin: 10px;
+  text-align: center;
   color: lightblue;
 }
 
